--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <div id="lessonsContainer"></div>
 
   <script>
-    const apiUrl = "https://corsproxy.io/?https://script.google.com/macros/s/AKfycbyKwmPdlfncmfegTPZgmds4mHglmjC7s6vTHY6F_urcSaK0fR366G58ABzgbx0wmCuEqQ/exec";
+    const apiUrl = "https://pacman.pacaprogram.workers.dev";
 
     const studioNames = [
       "Studio 1",
