--- a/index.html
+++ b/index.html
@@ -1,174 +1,97 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Upcoming Lessons</title>
+  <title>Today's Lessons</title>
   <style>
-    body {
-      margin: 0;
-      padding: 20px;
-      background-color: #ffffff;
-      font-family: Arial, sans-serif;
-    }
-
-    h1 {
-      text-align: center;
-      color: #1e3a8a;
-      margin-bottom: 30px;
-    }
-
-    #lessonsContainer {
-      max-width: 1600px;
-      margin: 0 auto;
-    }
-
-    .studio-row {
-      display: flex;
-      align-items: flex-start;
-      margin-bottom: 20px;
-      padding-bottom: 15px;
-      border-bottom: 1px solid rgba(0, 0, 0, 0.08);
-    }
-
-    .studio-label {
-      width: 140px;
-      font-weight: bold;
-      color: #1e3a8a;
-      padding-top: 10px;
-      flex-shrink: 0;
-    }
-
-    .studio-events {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-      flex: 1;
-    }
-
-    .event-tile {
-      background: #f3f4f6;
-      border-radius: 15px;
-      padding: 10px 15px;
-      min-width: 160px;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-      font-size: 0.95em;
-    }
-
-    .event-tile.highlight {
-      background: #d1fae5;
-      border: 2px solid #059669;
-    }
-
-    .event-tile strong {
-      color: #111827;
-    }
-
-    .loading {
-      text-align: center;
-      color: #6b7280;
-      margin-bottom: 20px;
-    }
+    body { font-family: sans-serif; padding: 2rem; }
+    table { width: 100%; border-collapse: collapse; }
+    th, td { border: 1px solid #ccc; padding: 8px; }
+    th { background: #f5f5f5; }
   </style>
 </head>
 <body>
-
-  <h1>Upcoming Lessons</h1>
-  <div class="loading">🔄 Loading lessons...</div>
-  <div id="lessonsContainer"></div>
+  <h1>Today's Lessons (AEDT)</h1>
+  <p><em>Powered by Cloudflare Worker</em></p>
+  <table id="lessons-table">
+    <thead>
+      <tr><th>Title</th><th>Location</th><th>Start</th><th>End</th></tr>
+    </thead>
+    <tbody></tbody>
+  </table>
 
   <script>
-    const apiUrl = "https://pacman.pacaprogram.workers.dev";
+    const ENDPOINT = "https://pacman.pacaprogram.workers.dev/";
 
-    const studioNames = [
-      "Studio 1",
-      "Studio 2",
-      "Studio 3",
-      "Studio 4",
-      "Studio 5",
-      "Studio 6",
-      "Recording Studio"
-    ];
+    async function loadLessons() {
+      const res = await fetch(ENDPOINT);
+      const rawEvents = await res.json();
 
-    function formatTime(isoStr) {
-      const date = new Date(isoStr);
-      return date.toLocaleTimeString('en-AU', {
-        hour: '2-digit',
-        minute: '2-digit',
-        hour12: true
+      const events = rawEvents.map(evt => {
+        const start = parseUTC(evt.start);
+        const end = parseUTC(evt.end);
+        return {
+          ...evt,
+          start,
+          end,
+          aedtStart: toAEDT(start),
+          aedtEnd: toAEDT(end),
+        };
       });
+
+      const today = new Intl.DateTimeFormat("en-AU", {
+        timeZone: "Australia/Sydney",
+        year: "numeric",
+        month: "2-digit",
+        day: "2-digit"
+      }).format(new Date());
+
+      const todaysEvents = events.filter(e => {
+        const eDay = new Intl.DateTimeFormat("en-AU", {
+          timeZone: "Australia/Sydney",
+          year: "numeric",
+          month: "2-digit",
+          day: "2-digit"
+        }).format(e.start);
+        return eDay === today;
+      });
+
+      todaysEvents.sort((a, b) => a.location.localeCompare(b.location));
+      renderLessons(todaysEvents);
     }
 
-    function isWithinNextHours(startIso, endIso, hours) {
-      const now = new Date();
-      const start = new Date(startIso);
-      const end = new Date(endIso);
-      const cutoff = new Date(now.getTime() + hours * 60 * 60 * 1000);
-      return start <= cutoff && end >= now;
+    function parseUTC(value) {
+      const match = value.match(/^(\\d{4})(\\d{2})(\\d{2})T(\\d{2})(\\d{2})(\\d{2})Z$/);
+      if (!match) return null;
+      const [_, y, m, d, h, min, s] = match;
+      return new Date(Date.UTC(+y, +m - 1, +d, +h, +min, +s));
     }
 
-    function isHappeningNow(startIso, endIso) {
-      const now = new Date();
-      const start = new Date(startIso);
-      const end = new Date(endIso);
-      return now >= start && now <= end;
+    function toAEDT(date) {
+      return new Intl.DateTimeFormat("en-AU", {
+        timeZone: "Australia/Sydney",
+        weekday: "short",
+        hour: "2-digit",
+        minute: "2-digit",
+        day: "numeric",
+        month: "short",
+        year: "numeric"
+      }).format(date);
     }
 
     function renderLessons(events) {
-      document.querySelector('.loading').style.display = 'none';
-      const container = document.getElementById('lessonsContainer');
-      container.innerHTML = '';
-
-      studioNames.forEach(studio => {
-        const row = document.createElement('div');
-        row.className = 'studio-row';
-
-        const label = document.createElement('div');
-        label.className = 'studio-label';
-        label.textContent = studio;
-        row.appendChild(label);
-
-        const tiles = document.createElement('div');
-        tiles.className = 'studio-events';
-
-        const matchingEvents = events.filter(event =>
-          event.location?.toLowerCase().includes(studio.toLowerCase()) &&
-          isWithinNextHours(event.startTime, event.endTime, 3)
-        );
-
-        if (matchingEvents.length === 0) {
-          tiles.innerHTML = "<div style='color: #9ca3af;'>No lessons</div>";
-        } else {
-          matchingEvents.forEach(event => {
-            const tile = document.createElement('div');
-            tile.className = 'event-tile';
-            if (isHappeningNow(event.startTime, event.endTime)) {
-              tile.classList.add('highlight');
-            }
-            tile.innerHTML = `
-              <strong>${event.summary}</strong><br>
-              ${formatTime(event.startTime)}
-            `;
-            tiles.appendChild(tile);
-          });
-        }
-
-        row.appendChild(tiles);
-        container.appendChild(row);
-      });
+      const tbody = document.querySelector(\"#lessons-table tbody\");
+      tbody.innerHTML = events.length === 0
+        ? '<tr><td colspan=\"4\">No lessons today.</td></tr>'
+        : events.map(evt => `
+            <tr>
+              <td>${evt.summary}</td>
+              <td>${evt.location}</td>
+              <td>${evt.aedtStart}</td>
+              <td>${evt.aedtEnd}</td>
+            </tr>`).join('');
     }
 
-    fetch(apiUrl)
-      .then(res => res.json())
-      .then(data => {
-        console.log("📦 Fetched lesson data:", data);
-        renderLessons(data);
-      })
-      .catch(err => {
-        document.querySelector('.loading').textContent = '❌ Failed to load lessons.';
-        console.error("❌ Fetch error:", err);
-      });
+    loadLessons();
   </script>
-
 </body>
 </html>
