--- a/index.html
+++ b/index.html
@@ -1,66 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Today's Lessons</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Today's Lessons - AEDT</title>
   <style>
-    body { font-family: sans-serif; padding: 2rem; }
-    table { width: 100%; border-collapse: collapse; }
-    th, td { border: 1px solid #ccc; padding: 8px; }
+    body { font-family: sans-serif; padding: 2rem; background: #fafafa; }
+    table { width: 100%; border-collapse: collapse; margin-top: 1rem; }
+    th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
     th { background: #f5f5f5; }
+    caption { caption-side: top; font-weight: bold; font-size: 1.2rem; }
   </style>
 </head>
 <body>
-  <h1>Today's Lessons (AEDT)</h1>
-  <p><em>Powered by Cloudflare Worker</em></p>
-  <table id="lessons-table">
+  <h1>Today's Lessons</h1>
+  <p><em>All times are shown in AEDT (Sydney)</em></p>
+  <table id="lessons">
     <thead>
-      <tr><th>Title</th><th>Location</th><th>Start</th><th>End</th></tr>
+      <tr><th>Title</th><th>Location</th><th>Start (AEDT)</th><th>End (AEDT)</th><th>UTC (Debug)</th></tr>
     </thead>
-    <tbody></tbody>
+    <tbody>
+      <tr><td colspan="5">Loading...</td></tr>
+    </tbody>
   </table>
 
   <script>
-    const ENDPOINT = "https://pacman.pacaprogram.workers.dev/";
-
-    async function loadLessons() {
-      const res = await fetch(ENDPOINT);
-      const rawEvents = await res.json();
-
-      const events = rawEvents.map(evt => {
-        const start = parseUTC(evt.start);
-        const end = parseUTC(evt.end);
-        return {
-          ...evt,
-          start,
-          end,
-          aedtStart: toAEDT(start),
-          aedtEnd: toAEDT(end),
-        };
-      });
-
-      const today = new Intl.DateTimeFormat("en-AU", {
-        timeZone: "Australia/Sydney",
-        year: "numeric",
-        month: "2-digit",
-        day: "2-digit"
-      }).format(new Date());
-
-      const todaysEvents = events.filter(e => {
-        const eDay = new Intl.DateTimeFormat("en-AU", {
-          timeZone: "Australia/Sydney",
-          year: "numeric",
-          month: "2-digit",
-          day: "2-digit"
-        }).format(e.start);
-        return eDay === today;
-      });
-
-      todaysEvents.sort((a, b) => a.location.localeCompare(b.location));
-      renderLessons(todaysEvents);
-    }
+    const ENDPOINT = "https://pacman.pacaprogram.workers.dev";
 
     function parseUTC(value) {
-      const match = value.match(/^(\\d{4})(\\d{2})(\\d{2})T(\\d{2})(\\d{2})(\\d{2})Z$/);
+      const match = value.match(/^(\d{4})(\d{2})(\d{2})T(\d{2})(\d{2})(\d{2})Z$/);
       if (!match) return null;
       const [_, y, m, d, h, min, s] = match;
       return new Date(Date.UTC(+y, +m - 1, +d, +h, +min, +s));
@@ -70,25 +38,62 @@
       return new Intl.DateTimeFormat("en-AU", {
         timeZone: "Australia/Sydney",
         weekday: "short",
+        year: "numeric",
+        month: "short",
+        day: "numeric",
         hour: "2-digit",
         minute: "2-digit",
-        day: "numeric",
-        month: "short",
-        year: "numeric"
+        hour12: true
       }).format(date);
     }
 
-    function renderLessons(events) {
-      const tbody = document.querySelector(\"#lessons-table tbody\");
-      tbody.innerHTML = events.length === 0
-        ? '<tr><td colspan=\"4\">No lessons today.</td></tr>'
-        : events.map(evt => `
-            <tr>
-              <td>${evt.summary}</td>
-              <td>${evt.location}</td>
-              <td>${evt.aedtStart}</td>
-              <td>${evt.aedtEnd}</td>
-            </tr>`).join('');
+    function getTodayAEDT() {
+      return new Intl.DateTimeFormat("en-AU", {
+        timeZone: "Australia/Sydney",
+        year: "numeric",
+        month: "2-digit",
+        day: "2-digit"
+      }).format(new Date());
+    }
+
+    function isTodayAEDT(date) {
+      const today = getTodayAEDT();
+      const d = new Intl.DateTimeFormat("en-AU", {
+        timeZone: "Australia/Sydney",
+        year: "numeric",
+        month: "2-digit",
+        day: "2-digit"
+      }).format(date);
+      return d === today;
+    }
+
+    function render(events) {
+      const tbody = document.querySelector("#lessons tbody");
+      if (!events.length) {
+        tbody.innerHTML = '<tr><td colspan="5">No lessons today.</td></tr>';
+        return;
+      }
+      tbody.innerHTML = events.map(evt => `
+        <tr>
+          <td>${evt.summary}</td>
+          <td>${evt.location}</td>
+          <td>${toAEDT(evt.start)}</td>
+          <td>${toAEDT(evt.end)}</td>
+          <td>${evt.start.toISOString()}</td>
+        </tr>`).join('');
+    }
+
+    async function loadLessons() {
+      const res = await fetch(ENDPOINT);
+      const data = await res.json();
+      const parsed = data.map(e => ({
+        ...e,
+        start: parseUTC(e.start),
+        end: parseUTC(e.end)
+      }));
+      const todayOnly = parsed.filter(e => isTodayAEDT(e.start));
+      todayOnly.sort((a, b) => a.location.localeCompare(b.location));
+      render(todayOnly);
     }
 
     loadLessons();
