--- a/index.html
+++ b/index.html
@@ -3,21 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Today's Lessons - AEDT</title>
+  <title>All Lessons (Debug Mode)</title>
   <style>
     body { font-family: sans-serif; padding: 2rem; background: #fafafa; }
     table { width: 100%; border-collapse: collapse; margin-top: 1rem; }
     th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
     th { background: #f5f5f5; }
-    caption { caption-side: top; font-weight: bold; font-size: 1.2rem; }
   </style>
 </head>
 <body>
-  <h1>Today's Lessons (AEDT)</h1>
-  <p><em>Powered by Cloudflare Worker</em></p>
+  <h1>All Lessons (No Filtering)</h1>
+  <p><em>Showing all lessons regardless of date. Times shown in AEDT.</em></p>
   <table id="lessons">
     <thead>
-      <tr><th>Title</th><th>Location</th><th>Start (AEDT)</th><th>End (AEDT)</th><th>UTC (Debug)</th></tr>
+      <tr><th>Title</th><th>Location</th><th>Start (AEDT)</th><th>End (AEDT)</th><th>Start (UTC)</th></tr>
     </thead>
     <tbody>
       <tr><td colspan="5">Loading...</td></tr>
@@ -47,30 +46,10 @@
       }).format(date);
     }
 
-    function getTodayAEDT() {
-      return new Intl.DateTimeFormat("en-AU", {
-        timeZone: "Australia/Sydney",
-        year: "numeric",
-        month: "2-digit",
-        day: "2-digit"
-      }).format(new Date());
-    }
-
-    function isTodayAEDT(date) {
-      const today = getTodayAEDT();
-      const d = new Intl.DateTimeFormat("en-AU", {
-        timeZone: "Australia/Sydney",
-        year: "numeric",
-        month: "2-digit",
-        day: "2-digit"
-      }).format(date);
-      return d === today;
-    }
-
     function render(events) {
       const tbody = document.querySelector("#lessons tbody");
       if (!events.length) {
-        tbody.innerHTML = '<tr><td colspan="5">No lessons today.</td></tr>';
+        tbody.innerHTML = '<tr><td colspan="5">No lessons found.</td></tr>';
         return;
       }
       tbody.innerHTML = events.map(evt => `
@@ -91,24 +70,10 @@
         ...e,
         start: parseUTC(e.start),
         end: parseUTC(e.end)
-      }));
+      })).filter(e => e.start && e.end);
 
-      const todayAEDT = getTodayAEDT();
-      console.log("Today (AEDT):", todayAEDT);
-
-      parsed.forEach(e => {
-        console.log("Lesson:", e.summary);
-        console.log("Start UTC:", e.start.toISOString());
-        console.log("Start AEDT:", new Intl.DateTimeFormat("en-AU", {
-          timeZone: "Australia/Sydney",
-          year: "numeric",
-          month: "2-digit",
-          day: "2-digit"
-        }).format(e.start));
-      });
-
-     parsed.sort((a, b) => a.location.localeCompare(b.location));
-render(parsed);
+      parsed.sort((a, b) => a.location.localeCompare(b.location));
+      render(parsed);
     }
 
     loadLessons();
