--- a/index.html
+++ b/index.html
@@ -46,14 +46,26 @@
       }).format(date);
     }
 
-    function isTodayAEDT(date) {
-      const nowAEDT = new Date().toLocaleString("en-AU", { timeZone: "Australia/Sydney" });
-      const today = new Date(nowAEDT);
-      const lesson = new Date(date.toLocaleString("en-AU", { timeZone: "Australia/Sydney" }));
+    function getAEDTDateParts(date) {
+      const parts = new Intl.DateTimeFormat("en-AU", {
+        timeZone: "Australia/Sydney",
+        year: "numeric",
+        month: "2-digit",
+        day: "2-digit"
+      }).formatToParts(date);
+      return {
+        year: parts.find(p => p.type === 'year').value,
+        month: parts.find(p => p.type === 'month').value,
+        day: parts.find(p => p.type === 'day').value
+      };
+    }
 
-      return today.getFullYear() === lesson.getFullYear() &&
-             today.getMonth() === lesson.getMonth() &&
-             today.getDate() === lesson.getDate();
+    function isTodayAEDT(date) {
+      const todayParts = getAEDTDateParts(new Date());
+      const dateParts = getAEDTDateParts(date);
+      return todayParts.year === dateParts.year &&
+             todayParts.month === dateParts.month &&
+             todayParts.day === dateParts.day;
     }
 
     function render(events) {
