--- a/index.html
+++ b/index.html
@@ -46,31 +46,11 @@
       }).format(date);
     }
 
-    function getAEDTDateParts(date) {
-      const parts = new Intl.DateTimeFormat("en-AU", {
-        timeZone: "Australia/Sydney",
-        year: "numeric",
-        month: "2-digit",
-        day: "2-digit"
-      }).formatToParts(date);
-      return {
-        year: parts.find(p => p.type === 'year').value,
-        month: parts.find(p => p.type === 'month').value,
-        day: parts.find(p => p.type === 'day').value
-      };
-    }
-
     function isTodayAEDT(date) {
-  const todayParts = getAEDTDateParts(new Date());
-  const dateParts = getAEDTDateParts(date);
-
-  console.log("TODAY", todayParts);
-  console.log("EVENT", date.toISOString(), "→", dateParts);
-
-  return todayParts.year === dateParts.year &&
-         todayParts.month === dateParts.month &&
-         todayParts.day === dateParts.day;
-}
+      const todayAEDT = new Date().toLocaleDateString("en-AU", { timeZone: "Australia/Sydney" });
+      const dateAEDT = date.toLocaleDateString("en-AU", { timeZone: "Australia/Sydney" });
+      console.log("Today AEDT:", todayAEDT, "| Event AEDT:", dateAEDT);
+      return todayAEDT === dateAEDT;
     }
 
     function render(events) {
