--- a/index.html
+++ b/index.html
@@ -2,95 +2,177 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Today's Lessons (AEDT)</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Upcoming Lessons</title>
   <style>
-    body { font-family: sans-serif; padding: 2rem; background: #fafafa; }
-    table { width: 100%; border-collapse: collapse; margin-top: 1rem; }
-    th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
-    th { background: #f5f5f5; }
+    body {
+      margin: 0;
+      padding: 20px;
+      background-color: #ffffff;
+      font-family: Arial, sans-serif;
+    }
+
+    h1 {
+      text-align: center;
+      color: #1e3a8a;
+      margin-bottom: 30px;
+    }
+
+    .studio-row {
+      display: flex;
+      align-items: flex-start;
+      margin-bottom: 20px;
+    }
+
+    .studio-label {
+      width: 140px;
+      font-weight: bold;
+      color: #1e3a8a;
+      padding-top: 10px;
+    }
+
+    .studio-events {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      flex: 1;
+    }
+
+    .event-tile {
+      background: #f3f4f6;
+      border-radius: 15px;
+      padding: 10px 15px;
+      min-width: 160px;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+      font-size: 0.95em;
+    }
+
+    .event-tile.highlight {
+      background: #d1fae5;
+      border: 2px solid #059669;
+    }
+
+    .event-tile strong {
+      color: #111827;
+    }
+
+    .loading {
+      text-align: center;
+      color: #6b7280;
+      margin-bottom: 20px;
+    }
   </style>
 </head>
 <body>
-  <h1>Today's Lessons (AEDT)</h1>
-  <p><em>Powered by Cloudflare Worker</em></p>
-  <table id="lessons">
-    <thead>
-      <tr><th>Title</th><th>Location</th><th>Start (AEDT)</th><th>End (AEDT)</th><th>Start (UTC)</th></tr>
-    </thead>
-    <tbody>
-      <tr><td colspan="5">Loading...</td></tr>
-    </tbody>
-  </table>
 
-  <script>
-    const ENDPOINT = "https://pacman.pacaprogram.workers.dev";
+<h1>Upcoming Lessons</h1>
+<p class="loading">🔄 Loading lessons...</p>
+<div id="lessonsContainer"></div>
 
-    function parseUTC(value) {
-      const match = value.match(/^(\d{4})(\d{2})(\d{2})T(\d{2})(\d{2})(\d{2})Z$/);
-      if (!match) return null;
-      const [_, y, m, d, h, min, s] = match;
-      return new Date(Date.UTC(+y, +m - 1, +d, +h, +min, +s));
-    }
+<script>
+  const apiUrl = "https://pacman.pacaprogram.workers.dev";
 
-    function toAEDT(date) {
-      return new Intl.DateTimeFormat("en-AU", {
-        timeZone: "Australia/Sydney",
-        weekday: "short",
-        year: "numeric",
-        month: "short",
-        day: "numeric",
-        hour: "2-digit",
-        minute: "2-digit",
-        hour12: true
-      }).format(date);
-    }
+  const studioNames = [
+    "Studio 1",
+    "Studio 2",
+    "Studio 3",
+    "Studio 4",
+    "Studio 5",
+    "Studio 6",
+    "Recording Studio"
+  ];
 
-    function isTodayAEDT(date) {
-      const todayAEDT = new Date().toLocaleDateString("en-AU", { timeZone: "Australia/Sydney" });
-      const dateAEDT = date.toLocaleDateString("en-AU", { timeZone: "Australia/Sydney" });
-      console.log("Today AEDT:", todayAEDT, "| Event AEDT:", dateAEDT);
-      return todayAEDT === dateAEDT;
-    }
+  function formatTime(isoStr) {
+    const date = new Date(isoStr);
+    return date.toLocaleTimeString('en-AU', {
+      hour: '2-digit',
+      minute: '2-digit',
+      hour12: true
+    });
+  }
 
-    function render(events) {
-      const tbody = document.querySelector("#lessons tbody");
-      if (!events.length) {
-        tbody.innerHTML = '<tr><td colspan="5">No lessons today.</td></tr>';
-        return;
+  function isWithinNextHours(startIso, endIso, hours) {
+    const now = new Date();
+    const start = new Date(startIso);
+    const end = new Date(endIso);
+    const cutoff = new Date(now.getTime() + hours * 60 * 60 * 1000);
+    return start <= cutoff && end >= now;
+  }
+
+  function isHappeningNow(startIso, endIso) {
+    const now = new Date();
+    const start = new Date(startIso);
+    const end = new Date(endIso);
+    return now >= start && now <= end;
+  }
+
+  function renderLessons(events) {
+    document.querySelector('.loading').style.display = 'none';
+    const container = document.getElementById('lessonsContainer');
+    container.innerHTML = '';
+
+    studioNames.forEach(studio => {
+      const row = document.createElement('div');
+      row.className = 'studio-row';
+
+      const label = document.createElement('div');
+      label.className = 'studio-label';
+      label.textContent = studio;
+      row.appendChild(label);
+
+      const tiles = document.createElement('div');
+      tiles.className = 'studio-events';
+
+      const matchingEvents = events.filter(event =>
+        event.location?.toLowerCase().includes(studio.toLowerCase()) &&
+        isWithinNextHours(event.start, event.end, 3)
+      );
+
+      if (matchingEvents.length === 0) {
+        tiles.innerHTML = "<div style='color: #9ca3af;'>No lessons</div>";
+      } else {
+        matchingEvents.forEach(event => {
+          const tile = document.createElement('div');
+          tile.className = 'event-tile';
+          if (isHappeningNow(event.start, event.end)) {
+            tile.classList.add('highlight');
+          }
+          tile.innerHTML = `
+            <strong>${event.summary}</strong><br>
+            ${formatTime(event.start)}
+          `;
+          tiles.appendChild(tile);
+        });
       }
-      tbody.innerHTML = events.map(evt => `
-        <tr>
-          <td>${evt.summary}</td>
-          <td>${evt.location}</td>
-          <td>${toAEDT(evt.start)}</td>
-          <td>${toAEDT(evt.end)}</td>
-          <td>${evt.start.toISOString()}</td>
-        </tr>`).join('');
-    }
 
-    async function loadLessons() {
-      console.log("📡 Fetching data from", ENDPOINT);
-      const res = await fetch(ENDPOINT);
-      const data = await res.json();
-      console.log("📦 Raw data:", data);
+      row.appendChild(tiles);
+      container.appendChild(row);
+    });
+  }
 
-      const parsed = data.map(e => ({
-        ...e,
-        start: parseUTC(e.start),
-        end: parseUTC(e.end)
-      })).filter(e => e.start && e.end);
+  fetch(apiUrl)
+    .then(res => res.json())
+    .then(data => {
+      console.log("Data from Cloudflare Worker:", data);
+      const parsed = data.map(evt => ({
+        ...evt,
+        start: parseICSDate(evt.start),
+        end: parseICSDate(evt.end)
+      }));
+      renderLessons(parsed);
+    })
+    .catch(err => {
+      document.querySelector('.loading').textContent = '❌ Failed to load lessons.';
+      console.error("Fetch error:", err);
+    });
 
-      console.log("📅 Parsed events:", parsed);
+  function parseICSDate(str) {
+    const match = str.match(/(\d{4})(\d{2})(\d{2})T(\d{2})(\d{2})(\d{2})Z/);
+    if (!match) return new Date(NaN);
+    const [, y, m, d, h, min, s] = match.map(Number);
+    return new Date(Date.UTC(y, m - 1, d, h, min, s));
+  }
+</script>
 
-      const filtered = parsed.filter(e => isTodayAEDT(e.start));
-      console.log("📆 Filtered (Today AEDT):", filtered);
-
-      filtered.sort((a, b) => a.location.localeCompare(b.location));
-      render(filtered);
-    }
-
-    loadLessons();
-  </script>
 </body>
 </html>
